aws-cdk/cloudformation/VpcCdkStack.template.json
{
 "Resources": {
  "MainVpc919A5E7E": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "MainVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/Resource"
   }
  },
  "MainVpcPublicSubnet1Subnet269349B1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet1/Subnet"
   }
  },
  "MainVpcPublicSubnet1RouteTableB35CB547": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet1/RouteTable"
   }
  },
  "MainVpcPublicSubnet1RouteTableAssociation12179C27": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet1RouteTableB35CB547"
    },
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet1Subnet269349B1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MainVpcPublicSubnet1DefaultRouteA089B896": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet1RouteTableB35CB547"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "DependsOn": [
    "MainVpcVPCGWBA74F963"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "MainVpcPublicSubnet1EIP33B08611": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet1/EIP"
   }
  },
  "MainVpcPublicSubnet1NATGatewayEEC1F6AE": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet1Subnet269349B1"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MainVpcPublicSubnet1EIP33B08611",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet1/NATGateway"
   }
  },
  "MainVpcPublicSubnet2Subnet287D062B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet2/Subnet"
   }
  },
  "MainVpcPublicSubnet2RouteTableE69B5772": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet2/RouteTable"
   }
  },
  "MainVpcPublicSubnet2RouteTableAssociationDA7BB36E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet2RouteTableE69B5772"
    },
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet2Subnet287D062B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MainVpcPublicSubnet2DefaultRoute3AE7286A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet2RouteTableE69B5772"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "DependsOn": [
    "MainVpcVPCGWBA74F963"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "MainVpcPublicSubnet3Subnet7B1D46AE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet3/Subnet"
   }
  },
  "MainVpcPublicSubnet3RouteTable39F2F1C5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet3/RouteTable"
   }
  },
  "MainVpcPublicSubnet3RouteTableAssociationD981BF2A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet3RouteTable39F2F1C5"
    },
    "SubnetId": {
     "Ref": "MainVpcPublicSubnet3Subnet7B1D46AE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "MainVpcPublicSubnet3DefaultRoute22DD842A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPublicSubnet3RouteTable39F2F1C5"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "DependsOn": [
    "MainVpcVPCGWBA74F963"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PublicSubnet3/DefaultRoute"
   }
  },
  "MainVpcPrivateSubnet1SubnetA8D0757B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.3.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet1/Subnet"
   }
  },
  "MainVpcPrivateSubnet1RouteTable9385ABF4": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet1/RouteTable"
   }
  },
  "MainVpcPrivateSubnet1RouteTableAssociation628BDBF6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet1RouteTable9385ABF4"
    },
    "SubnetId": {
     "Ref": "MainVpcPrivateSubnet1SubnetA8D0757B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MainVpcPrivateSubnet1DefaultRoute7A3E1735": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet1RouteTable9385ABF4"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MainVpcPublicSubnet1NATGatewayEEC1F6AE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "MainVpcPrivateSubnet2SubnetFC4F66C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.3.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet2/Subnet"
   }
  },
  "MainVpcPrivateSubnet2RouteTable8E0D12CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet2/RouteTable"
   }
  },
  "MainVpcPrivateSubnet2RouteTableAssociationE83CB470": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet2RouteTable8E0D12CB"
    },
    "SubnetId": {
     "Ref": "MainVpcPrivateSubnet2SubnetFC4F66C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MainVpcPrivateSubnet2DefaultRoute986F5D29": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet2RouteTable8E0D12CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MainVpcPublicSubnet1NATGatewayEEC1F6AE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "MainVpcPrivateSubnet3SubnetE4BF29BE": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "AvailabilityZone": "ap-south-1c",
    "CidrBlock": "10.0.3.32/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet3/Subnet"
   }
  },
  "MainVpcPrivateSubnet3RouteTable3AFA6443": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcCdkStack/MainVpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet3/RouteTable"
   }
  },
  "MainVpcPrivateSubnet3RouteTableAssociation3E57F028": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet3RouteTable3AFA6443"
    },
    "SubnetId": {
     "Ref": "MainVpcPrivateSubnet3SubnetE4BF29BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "MainVpcPrivateSubnet3DefaultRouteF7084D4D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MainVpcPrivateSubnet3RouteTable3AFA6443"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MainVpcPublicSubnet1NATGatewayEEC1F6AE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "MainVpcIGW53625DB6": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "MainVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/IGW"
   }
  },
  "MainVpcVPCGWBA74F963": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "InternetGatewayId": {
     "Ref": "MainVpcIGW53625DB6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/VPCGW"
   }
  },
  "MainVpcS35C084C4F": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    },
    "RouteTableIds": [
     {
      "Ref": "MainVpcPrivateSubnet1RouteTable9385ABF4"
     },
     {
      "Ref": "MainVpcPrivateSubnet2RouteTable8E0D12CB"
     },
     {
      "Ref": "MainVpcPrivateSubnet3RouteTable3AFA6443"
     },
     {
      "Ref": "MainVpcPublicSubnet1RouteTableB35CB547"
     },
     {
      "Ref": "MainVpcPublicSubnet2RouteTableE69B5772"
     },
     {
      "Ref": "MainVpcPublicSubnet3RouteTable39F2F1C5"
     }
    ],
    "VpcEndpointType": "Gateway"
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/MainVpc/S3/Resource"
   }
  },
  "webserversgD43E599E": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "security group for a web server",
    "GroupName": "web-server-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow SSH access from anywhere",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow HTTP traffic from anywhere on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "allow HTTPS traffic from anywhere on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/web-server-sg/Resource"
   }
  },
  "backendserversg3DD86AD0": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "security group for a backend server",
    "GroupName": "backend-server-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    }
   },
   "DependsOn": [
    "webserversgD43E599E"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/backend-server-sg/Resource"
   }
  },
  "backendserversgfromVpcCdkStackwebserversg2538E5638000502C02AA": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "allow traffic on port 8000 from the webserver security group",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "backendserversg3DD86AD0",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "webserversgD43E599E",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "DependsOn": [
    "webserversgD43E599E"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/backend-server-sg/from VpcCdkStackwebserversg2538E563:8000"
   }
  },
  "backendserversgfromVpcCdkStackwebserversg2538E56322815EA41A": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "allow traffic on port 22 from the webserver security group for testing purpose",
    "FromPort": 22,
    "GroupId": {
     "Fn::GetAtt": [
      "backendserversg3DD86AD0",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "webserversgD43E599E",
      "GroupId"
     ]
    },
    "ToPort": 22
   },
   "DependsOn": [
    "webserversgD43E599E"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/backend-server-sg/from VpcCdkStackwebserversg2538E563:22"
   }
  },
  "databaseserversgE2611B1C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "security group for a database server",
    "GroupName": "database-server-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MainVpc919A5E7E"
    }
   },
   "DependsOn": [
    "backendserversgfromVpcCdkStackwebserversg2538E56322815EA41A",
    "backendserversgfromVpcCdkStackwebserversg2538E5638000502C02AA",
    "backendserversg3DD86AD0"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/database-server-sg/Resource"
   }
  },
  "databaseserversgfromVpcCdkStackbackendserversg113999453306804BFD6C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "allow traffic on port 3306 from the backend server security group",
    "FromPort": 3306,
    "GroupId": {
     "Fn::GetAtt": [
      "databaseserversgE2611B1C",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "backendserversg3DD86AD0",
      "GroupId"
     ]
    },
    "ToPort": 3306
   },
   "DependsOn": [
    "backendserversgfromVpcCdkStackwebserversg2538E56322815EA41A",
    "backendserversgfromVpcCdkStackwebserversg2538E5638000502C02AA",
    "backendserversg3DD86AD0"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/database-server-sg/from VpcCdkStackbackendserversg11399945:3306"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32QTQvCMAyGf4v3rn7jWURkFxmbeJWuixrd0tGmExH/u51Od/OUJw8v4SUTOZ3L0UDdXKSLa1RiLh8ZK30VQR1AT+RjX2uxOtI+WYnE5yXqzOcE3LqeUuMZdiovofe9WzpnNCpGQ79wC+s4acdW8UYx3NRdJBabgP3hmBhs4G/g06TblhyqnisgFp0JZddU1AaJu+hvzUB7i3zfWOPrd8u/IqaTBeeeIgVnvNXvwl9+CjIFyIsbNuOZHC/CCy8OMbKeGCuQ6We+AAS7s/xeAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "VpcCdkStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
